--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "ansi-colors": "^4.1.3",
-    "express": "^4.21.1"
-  }
+    "express": "^4.21.2",
+    "node-fetch": "^3.3.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alfreimuth/js-my-recipes.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alfreimuth/js-my-recipes/issues"
+  },
+  "homepage": "https://github.com/alfreimuth/js-my-recipes#readme"
 }
